# OhMyPhone

./: .gitignore  README.md  verify_airplane_mode.sh
daemon/: Cargo.toml
daemon/deploy/: android_helper.sh  build_android.sh  config.toml.example  daemon.sh  deploy_tailscale.sh
daemon/src/: auth.rs  config.rs  main.rs
daemon/src/api/: call.rs  mod.rs  radio.rs  status.rs
daemon/src/executor/: shell.rs
daemon/target-android/: .rustc_info.json
daemon/target-android/release/.fingerprint/autocfg-b28c83fb1f0e5b5d/: lib-autocfg  lib-autocfg.json
daemon/target-android/release/.fingerprint/bytes-69d65b0457afcf29/: lib-bytes  lib-bytes.json
daemon/target-android/release/.fingerprint/bytestring-74a1d90064c2ab75/: lib-bytestring  lib-bytestring.json
daemon/target-android/release/.fingerprint/cc-df40c1a96929c9fe/: lib-cc  lib-cc.json
daemon/target-android/release/.fingerprint/cfg-if-e54b14f09b7f0402/: lib-cfg_if  lib-cfg_if.json
daemon/target-android/release/.fingerprint/convert_case-a223e0950c1cb3c8/: lib-convert_case  lib-convert_case.json
daemon/target-android/release/.fingerprint/cookie-44baf8792114c8a4/: build-script-build-script-build  build-script-build-script-build.json
daemon/target-android/release/.fingerprint/crc32fast-81301b70159bb7dc/: build-script-build-script-build  build-script-build-script-build.json
daemon/target-android/release/.fingerprint/find-msvc-tools-eef2993e2dc31b77/: lib-find_msvc_tools  lib-find_msvc_tools.json
daemon/target-android/release/.fingerprint/generic-array-bd7462a64bee6818/: build-script-build-script-build  (+1 more)
(+326 files in other folders)
